--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title><%= title %></title>
-  <link rel='stylesheet' href='/Content/app.css' />
-  <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap-grid.min.css' />
-  <link rel='stylesheet' href='/@fortawesome/fontawesome-free/css/all.min.css'/>
-</head>
-<body>
-  <h1><%= title %></h1>
-  <p>Hello! Welcome to <%= title %></p>
+<%- include partials/header.ejs %>
+<%- include partials/SiteHeader.ejs %>
+<!--main content-->
+<main>
+<p>test</p>
+</main>
+<%- include partials/indexbottom_nav.ejs %>  
+<%- include partials/footer.ejs %>
+  
 
-  <script src ="/Scripts/app.js"></script>
-  <script src="/jquery/dist/jquery.min.js"></script>
-  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
+
+
+
