--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,8 @@
 <%- include partials/header.ejs %>
 <%- include partials/SiteHeader.ejs %>
 <!--main content-->
-<main>
-<p>test</p>
-</main>
+<%- include partials/maincontent.ejs %>
+
 <%- include partials/indexbottom_nav.ejs %>  
 <%- include partials/footer.ejs %>
   
