--- a/views/partials/SiteHeader.ejs
+++ b/views/partials/SiteHeader.ejs
@@ -1,10 +1,13 @@
 <!-- site header -->
-<div class="container-fluid bg-dark text-white" style="--bs-bg-opacity: .5; padding: 40px">
-    <div class="row justify-content-center" style="padding: 0px;">
-        <div class="col-sm-1">
+<div class="container-fluid bg-dark text-white" style="--bs-bg-opacity: .5; padding: 20px">
+    <div class="row style="padding: 0px;">
+        <div class="col-sm-5">
             <div class="jumbotron">
-            <h1 class="display-2">Home.</h1>
+            <h2 class="display-2" style="font-size: 90px;"><%=page%>.</h2>
             </div>
+        </div>
+        <div class="col-sm-2 offset-1">
+            <img src="">
         </div>
     </div>
 </div>
@@ -12,20 +15,20 @@
     <div class="container-fluid">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="">
             <li class="nav-item">
-            <a <%if(page==='Home'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "#">Home</a>
+            <a <%if(page==='Home'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "/">Home</a>
             </li>
             <li class="nav-item">
-            <a <%if(page==='About'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "#">About Me</a>
+            <a <%if(page==='About Me'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "/AboutMe">About Me</a>
             </li>
             <li class="nav-item">
             <li class="nav-item">
-            <a <%if(page==='Services'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "#">Services</a>
+            <a <%if(page==='Services'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "/Services">Services</a>
             </li>
             <li class="nav-item">
-            <a <%if(page==='Projects'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "#">Projects</a>
+            <a <%if(page==='Projects'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "/Projects">Projects</a>
             </li>
             <li class="nav-item">
-            <a <%if(page==='Contact'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "#">Contact</a>
+            <a <%if(page==='Contact'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "/Contact">Contact</a>
             </li>
         </ul>
     </div>
