--- a/views/partials/indexbottom_nav.ejs
+++ b/views/partials/indexbottom_nav.ejs
@@ -3,7 +3,7 @@
 <div class="container-fluid bg-light text-white fixed-bottom" style="--bs-bg-opacity: .15; padding-yop: 5px">
     <div class="row justify-content-center" style="padding: 0px;">
         <div class="col-sm-1">
-            <h6><h6>
+            <h6>Hello.<h6>
         </div>
     </div>
 </div> 
