--- a/views/partials/SiteHeader.ejs
+++ b/views/partials/SiteHeader.ejs
@@ -1,19 +1,19 @@
 <!-- site header -->
-<div class="container-fluid bg-dark text-white" style="--bs-bg-opacity: .5; padding: 20px">
+<div class="container-fluid bg-dark text-white" style="--bs-bg-opacity: .67; padding: 20px">
     <div class="row style="padding: 0px;">
-        <div class="col-sm-5">
+        <div class="col-sm-10">
             <div class="jumbotron">
             <h2 class="display-2" style="font-size: 90px;"><%=page%>.</h2>
             </div>
         </div>
-        <div class="col-sm-2 offset-1">
-            <img src="">
+        <div class="col-sm-1" style="padding-left: 10px;">
+            <a href="/"><img src="Assets/images/A..png" style="width: 150px;"></a>
         </div>
     </div>
 </div>
  <nav class="navbar sticky-top navbar-expand-lg  bg-light navbar-dark" style="--bs-bg-opacity: .15;">
     <div class="container-fluid">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
             <a <%if(page==='Home'){%>class="nav-link disabled"<%}%>class="nav-link active" aria-current="page" href = "/">Home</a>
             </li>
