added section headers

--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,3 +1,12 @@
+
+    /* app.css
+    
+    Abishekh Manoharan
+    301165253
+    Sept-29-2021 */
+
+
+/* adding background */
 body {
     background-image: url("/Assets/images/mainbg.jpg");
     background-size:cover;
