--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,8 +1,10 @@
+<!-- header partial-->
 <%- include partials/header.ejs %>
-<!--main content-->
+<!--main content partial-->
 <%- include partials/maincontent.ejs %>
-
-<%- include partials/indexbottom_nav.ejs %>  
+<!-- bottom navbar partial -->
+<%- include partials/indexbottom_nav.ejs %>
+<!-- footer partial-->  
 <%- include partials/footer.ejs %>
   
 
