--- a/views/partials/SiteHeader.ejs
+++ b/views/partials/SiteHeader.ejs
@@ -1,3 +1,11 @@
+<!-- 
+    SiteHeader.ejs
+    
+    Abishekh Manoharan
+    301165253
+    Sept-29-2021
+
+ -->
 <!-- site header -->
 <div class="container-fluid bg-dark text-white" style="--bs-bg-opacity: .67; padding: 20px">
     <div class="row style="padding: 0px;">
@@ -11,6 +19,7 @@
         </div>
     </div>
 </div>
+<!-- nav bar-->
  <nav class="navbar sticky-top navbar-expand-lg  bg-light navbar-dark" style="--bs-bg-opacity: .15;">
     <div class="container-fluid">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
