--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,11 @@
+<!-- 
+    header.ejs
+    
+    Abishekh Manoharan
+    301165253
+    Sept-29-2021
+
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head style="padding-bottom: 100px">
