--- a/views/partials/indexbottom_nav.ejs
+++ b/views/partials/indexbottom_nav.ejs
@@ -1,3 +1,12 @@
+
+<!-- 
+    indexbottom_nav.ejs
+    
+    Abishekh Manoharan
+    301165253
+    Sept-29-2021
+
+ -->
 <!-- Bottom Nav -->
 <footer>
 <div class="container-fluid bg-light text-white fixed-bottom" style="--bs-bg-opacity: .15; padding-yop: 5px">
