--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,10 @@
+<!-- header partial-->
 <%- include partials/header.ejs %>
+<!-- nav bar an jumbatron patial-->
 <%- include partials/SiteHeader.ejs %>
-
-<!--main content-->
+<!--main content partial-->
 <%- include partials/maincontent.ejs %>
-
-<%- include partials/indexbottom_nav.ejs %>  
+<!-- bottom navbar partial -->
+<%- include partials/indexbottom_nav.ejs %>
+<!-- footer partial-->  
 <%- include partials/footer.ejs %>
-  
-
-
-
-
