--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,12 @@
+<!-- 
+    footer.ejs
+    
+    Abishekh Manoharan
+    301165253
+    Sept-29-2021
+
+ -->
+
 <!-- Script Section -->
   <script src="/jquery/dist/jquery.min.js"></script>
   <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
