updated about me

--- a/views/partials/maincontent.ejs
+++ b/views/partials/maincontent.ejs
@@ -35,6 +35,10 @@
                             <p><strong>Place of residence:</strong> Toronto, Canada</p>
                         </li>
                         <li>
+                            <p><strong>Education:</strong> Studying Software Engineering Technology at Centennial College.</p>
+                            <p><strong>Expected graduation:</strong>Jul. 2023</p>
+                        </li>
+                        <li>
                             <p>My <a href="Assets/documents/Resume.pdf">RESUME</a></p>
                         </li>
                     </ul>
