dded additional information in about me page

--- a/views/partials/maincontent.ejs
+++ b/views/partials/maincontent.ejs
@@ -35,11 +35,13 @@
                             <p><strong>Place of residence:</strong> Toronto, Canada</p>
                         </li>
                         <li>
-                            <p><strong>Education:</strong> Studying Software Engineering Technology at Centennial College.</p>
-                            <p><strong>Expected graduation:</strong>Jul. 2023</p>
+                            <p><strong>Education:</strong> Studying Software Engineering Technology at Centennial College. <i>(Expected graduation: Jul. 2023)</i></p>
                         </li>
                         <li>
-                            <p>My <a href="Assets/documents/Resume.pdf">RESUME</a></p>
+                            <p>Hello everyone. Thank you for visting my portfolio. <br><br>I like to think of myself as a curious, creative, and passionate individual. My hobbies include reading, art, and music.<br> While I am new to the field of web development, I am always amazed at the seemingly infinite possibilities  <br>  available to developers and customers alike.I hope to bring the same feelings to my clients and to <br> develop the skillsets necessary to bring their dreams to fruition.</p>
+                        </li>
+                        <li>
+                            <p>Please feel free to download and view my <a href="Assets/documents/Resume.pdf">resume</a></p>
                         </li>
                     </ul>
                 </div>
