minor fixes (eg fixed font color)

--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -3,7 +3,7 @@
 <!-- nav bar an jumbatron patial-->
 <%- include ../partials/SiteHeader.ejs %>
 
-<main class="container">
+<main class="container" style="color: white">
     <!-- Message Area -->
     <% if(messages.length > 0) {%>
         <div class="alert alert-danger">
